<resources>
    <string name="app_name">NY Times APP</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nytimes">NYTIMES</string>
    <string name="section">section</string>
    <string name="article_title_example">New York Times article title example for NYTimes App</string>
    <string name="article_published_date_example">Published at: 2022–06–05</string>
    <string name="article_section_example">The Learning Network</string>
    <string name="article_description_example">description title example for NYTimes App</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="error_404_data_not_found">Error 404: Data Not Found</string>
</resources>