<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/dark_background"
    >

    <ImageView
        android:id="@+id/iv_article_main_image"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:foregroundGravity="right"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="8dp"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_article"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:maxWidth="230dp"
        android:text="@string/article_title_example"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/iv_article_main_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="230dp"
        android:text="@string/article_description_example"
        android:textColor="@color/light_grey"
        android:textSize="16sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_article"
        app:layout_constraintTop_toBottomOf="@+id/tv_article" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/article_published_date_example"
        android:textColor="@color/light_grey"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/tv_description"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="@id/tv_description"
        app:layout_constraintTop_toBottomOf="@id/tv_description" />

    <TextView
        android:id="@+id/tv_section_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/article_section_example"
        android:textColor="@color/light_grey"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/iv_article_main_image"
        app:layout_constraintStart_toStartOf="@+id/iv_article_main_image"
        app:layout_constraintTop_toBottomOf="@+id/iv_article_main_image" />
</androidx.constraintlayout.widget.ConstraintLayout>